fix header on smaller widths, stop war log page from calling player card js.

--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,25 @@ button:hover, select:hover {
     font-weight: 800;
 }
 
-@media screen and (max-width: 650px) {   
-    #sort-display label {
-        display: none;
+@media screen and (max-width: 750px) {   
+    .header {
+        flex-direction: column;
+        height: 70px;
+    }
+    .title {
+        margin-right: 0;
+    }
+    #sort-display {
+        margin-left: -10px;
+        margin-top: -10px;
+        margin-right: auto;
+    }
+    button, select {
+        margin-left: 0;
+        padding: 5px 7px;
+    }
+    .container {
+        padding-top: 90px;
     }
 }
 
